# cclib

./: .buildinfo  .editorconfig  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .tombi.toml  .travis.yml  .yamlfmt.yml  ANNOUNCE  CHANGELOG  CODE_OF_CONDUCT.md  INSTALL  LICENSE  MANIFEST  MANIFEST.in  README  README.md  THANKS  attributes.html  attributes_dev.html  bridge.html  changelog.html  conftest.py  contents.html  coverage.html  coverage_dev.html  data.html  data_dev.html  data_notes.html  development.html  downloadwiki.py  flake.nix  genindex.html  how_to_install.html  how_to_parse.html  index.html  install_pyquante.sh  logfiledist  manifest.py  (+16 more)
.devcontainer/: devcontainer.json
.github/: codecov.yml  dependabot.yml  license_header.txt  zizmor.yml
.github/scripts/: build_deploy_docs_manually.bash  prepare_ci_for_versioningit.py  run_pytest.bash  run_pytest_methods.bash  run_pytest_pyscf.bash  run_unittest.bash
.github/workflows/: cclib_docs.yml  cclib_docs_build.yml  cclib_docs_build.yml_  cclib_docs_push.yml  cclib_docs_push.yml_  cclib_nix.yml  cclib_pytest.yml  ci.yml  docs.yml  nix.yml  pre-commit.yml  publish.yml  test_and_package.yml
ADF/ADF2004.01/: Au2-fixed.adfout  Mo5Obdt2-opt-c2v.adfout  MoOCl4-sp.adfout  WH6-opt.adfout  dvb_gopt.adfout  dvb_sp_b.adfout  dvb_un_sp.adfout  dvb_un_sp_c.adfout
ADF/ADF2006.01/: Au2.out  Frags_NiCO4_orig.out  HgMeBr_zso_orig.out
ADF/ADF2013.01/: dvb_gopt_b_fullscf.adfout  dvb_gopt_b_unconverged.adfout  stopiter_MoOCl4-sp.adfout  stopiter_dvb_sp.adfout  stopiter_dvb_sp_b.adfout  stopiter_dvb_sp_c.adfout  stopiter_dvb_sp_d.adfout  stopiter_dvb_un_sp.adfout  stopiter_dvb_un_sp_c.adfout
ADF/ADF2014.01/: DMO_ORD_orig.out  dvb_gopt_b_fullscf.out
ADF/ADF2016/: fa2.adf.out
DALTON/DALTON-2013/: C_bigbasis.aug-cc-pCVQZ.out  dvb_sp_hf_nosym.out  dvb_td_normalprint.out
DALTON/DALTON-2013.0/: b3lyp_energy_dvb_sp_nosym.out
DALTON/DALTON-2015/: Trp_polar_response.out  Trp_polar_static.out  dalton_atombasis.out  dalton_intgrl.out  stopiter_dalton_dft.out  stopiter_dalton_hf.out  trithiolane_polar_response.out
DALTON/DALTON-2016/: Trp_polar_response_diplnx.out  huge_neg_polar_freq.out  huge_neg_polar_stat.out
DALTON/DALTON-2018/: dft_properties_nosym_H2O_cc-pVDZ.out  tdhf_2000.out  tdhf_2000_sym.out  tdhf_normal.out  tdhf_normal_sym.out  tdpbe_2000.out  tdpbe_2000_sym.out  tdpbe_normal.out  tdpbe_normal_sym.out
GAMESS-UK/GAMESS-UK6.0/: dscf_4.out  duhf_1.out
GAMESS-UK/GAMESS-UK7.0/: dvb_sp.out  mg10.out  pyridine.out  pyridine2_21m10r.out
GAMESS-UK/GAMESS-UK8.0/: dvb_gopt_c.out  dvb_gopt_hf_unconverged.out  dvb_sp.out  stopiter_gamessuk_dft.out  stopiter_gamessuk_hf.out
GAMESS/Firefly8.0/: dvb_gopt_a_unconverged.out  stopiter_firefly.out
GAMESS/Firefly8.1/: naphtalene_t_0.out  naphtalene_t_0_SP.out
GAMESS/GAMESS-US/: 2CO.ccsd.aug-cc-pVDZ.out  MoOCl4-sp_2005.06.27.r3.out  N2-ROMP2.out  N2-UMP2.out  cyclopentadienyl.rhf.gms.out.cut  dvb_gopt_a_2006.02.22.r2.out  ex.out  paulo_h2o-mp2.out  water_mp2_nprint9.out
GAMESS/GAMESS-US2004/: exam01.out
GAMESS/GAMESS-US2005/: water_ccd_2005.06.27.r3.out  water_ccsd(t)_2005.06.27.r3.out  water_ccsd_2005.06.27.r3.out  water_cis_dets.2005.06.27.r3.out  water_mp2_2005.06.27.r3.out
GAMESS/GAMESS-US2006/: C_bigbasis_2006.02.22.r3.out  dvb_sp_2006.02.22.r2.out  dvb_un_sp_2006.02.22.r2.out
GAMESS/GAMESS-US2008/: lif.r=5.6.mcscf.accd.4x4.out
GAMESS/GAMESS-US2012/: ScriptBicarbNa1B3LYP-B2Vib-good.gamout  dvb_gopt_a.out  dvb_gopt_a_unconverged.out  stopiter_gamess.out
GAMESS/GAMESS-US2013/: N-UHF.out
GAMESS/GAMESS-US2014/: C_bigbasis.out  Trp_polar_freq.out  dvb_td_trplet.out  trithiolane_polar_tdhf.out  water_cis_saps.out  water_mp2.out
GAMESS/PCGAMESS/: CN_ir.out  C_bigbasis.out  d2d_sp.out  dvb_gopt_a.out  dvb_td_trplet.out  dvb_un_sp.out  triazole_tddft_c1_b3lyp_631Gdp_sp.out  water_mp2.out
GAMESS/WinGAMESS/: H2O_def2SVPD_triplet_2019.06.30.R1.gamess  dvb_td_trplet_2007.03.24.r1.out
Gaussian/Gaussian03/: AM1_SP.out  QVGXLLKOCUKJST-UHFFFAOYAJmult3Fixed.out  dvb_ir.out  dvb_td.out  m1b1.out  neoprene.out
Gaussian/Gaussian09/: 100.g09  534.out  BSL_opt_freq_DFT.com  BSL_opt_freq_DFT.out  OPT_td.out  OPT_td_g09.out  dvb_bomd.out  guessIndo_modified_ALT.out  jos.teunissen.out  stopiter_gaussian.out
Gaussian/Gaussian98/: NIST_CCCBDB_1himidaz_m21b0.out  NIST_CCCBDB_1himidaz_m23b6.out  oo-LAN.out
Jaguar/Jaguar4.2/: dvb_gopt_b.out
Jaguar/Jaguar6.5/: dvb_sp.out  dvb_un_sp.out
Jaguar/Jaguar8.3/: stopiter_jaguar_dft.out  stopiter_jaguar_hf.out
_sources/: attributes.rst.txt  attributes_dev.rst.txt  contents.rst.txt  coverage.rst.txt  coverage_dev.rst.txt  development.rst.txt  index.rst.txt
cclib/: __init__.py  exception.py  exceptions.py  notes.md  tree.py
data/: .gitignore  regression_download.sh  regressionfiles.txt  wget.sh
doc/: Code_of_Conduct  Makefile  README.md  requirements.txt
docs/: Makefile  README.md  targets.txt
github_actions/: deploy_docs.bash
nix/: cclib.nix  overlay.nix
old/: downloadwiki.py
recipes/: extract_last_geom.py  plot_geometry_convergence.py  qchem_make_freq_input_from_opt.py  qchem_make_opt_input_from_opt.py
test/: __init__.py  bettertest.py  conftest.py  constants.py  dvb_sp.mbo  dvb_un_sp.mbo  easyparse.py  methods.py  parseADF.py  parseGAMESS.py  parseGaussian.py  parseJaguar.py  pytest.ini  regression.py  regression_io.py  regression_method.py  run_regressions.py  test.out  testBasis.py  testCC.py  testCI.py  testCore.py  testGeoOpt.py  testMP.py  testMPA.py  testSP.py  testSPun.py  testScan.py  testTD.py  testTDun.py  test_bridge.py  test_ccdriver.py  test_code_in_code.py  test_data.py  test_data_new.py  test_io.py  test_method.py  test_parser.py  test_tree.py  test_tree_usage.py  (+11 more)
tools/: versioningit_conditional_disable.py  versioningit_override.py
travis/: build_deploy_docs_manually.sh  build_docs.bash  build_docs.sh  deploy_docs_travis-sphinx.sh  deploy_docs_travis.bash  requirements_3.2.txt  run_pytest.bash  run_pytest.sh  run_travis_tests.sh  run_unittest.bash
(+2663 files in other folders)
