[project]
name = "cclib"
dynamic = ["version"]
description = "parsers and algorithms for computational chemistry"
readme = "README.md"
authors = [
    { name = "cclib development team", email = "cclib@googlegroups.com" }
]
maintainers = [
    { name = "cclib development team", email = "cclib@googlegroups.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "packaging>=19.0",
    "periodictable",
    "scipy>=1.2.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/cclib/cclib/issues"
Changelog = "https://github.com/cclib/cclib/blob/master/doc/sphinx/changelog.rst"
Documentation = "http://cclib.github.io/"
Homepage = "https://github.com/cclib/cclib"

[project.scripts]
ccframe = "cclib.scripts.ccframe:main"
ccget = "cclib.scripts.ccget:ccget"
ccwrite = "cclib.scripts.ccwrite:main"
cda = "cclib.scripts.cda:main"

[project.optional-dependencies]
all = ["cclib[bridges]"]
bridges = [
    "ase>=3.21",
    "biopython",
    "chemfiles",
    "openbabel",
    "pandas",
    "pyscf",
    "geometric",
    "qc-iodata>=1.0.0a2",
]
dev = ["cclib[bridges,docs,test-infrastructure]"]
docs = [
    "build",
    "sphinx",
    "sphinx_rtd_theme",
]
test = ["cclib[bridges,docs,test-infrastructure]"]
test-infrastructure = [
    "pytest-cov",
    "pytest-xdist",
    "pyyaml",
    "pytest-xdist",
]

[dependency-groups]
pixi-bridges = [
    "pyquante2 @ git+https://github.com/cclib/pyquante2.git@cythonize-becke",
    "pyscf-properties @ git+https://github.com/pyscf/properties.git",
]

[build-system]
requires = [
    "setuptools>=61.0",
    "versioningit>=2.0",
]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
branch = true

[tool.mypy]
disable_error_code = [
    "attr-defined",
]
disallow_incomplete_defs = true
disallow_untyped_defs = true
enable_error_code = [
    "ignore-without-code",
]
strict = true

[[tool.mypy.overrides]]
module = [
    "Bio.PDB.Atom",
    "Bio.PDB.Superimposer",
    "PyQuante.CGBF",
    "PyQuante.Molecule",
    "PyQuante.hartree_fock",
    "ase",
    "ase.calculators.calculator",
    "ase.calculators.emt",
    "ase.io.trajectory",
    "h5py",
    "horton",
    "horton.io.iodata",
    "iodata",
    "iodata.api",
    "iodata.orbitals",
    "openbabel",
    "openbabel.pybel",
    "periodictable",
    "psi4",
    "psi4.core",
    "pybel",
    "pyquante2",
    "pyscf",
    "pyscf.geomopt.berny_solver",
    "pyscf.geomopt.geometric_solver",
    "pyscf.prop",
    "pyvtk",
    "pyvtk.DataSetAttr",
    "scipy",
    "scipy.constants",
    "scipy.spatial",
    "scipy.spatial.transform",
    "skip",
    "test_data",
    "common",
]
ignore_missing_imports = true

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = [
    "linux-64",
    "osx-64",
    "osx-arm64",
    "win-64",
]

[tool.pixi.pypi-dependencies]
cclib = { path = ".", editable = true }

[tool.pixi.environments]
# default = { solve-group = "default" }
# all = { features = ["all"], solve-group = "default" }
# bridges = { features = ["bridges"], solve-group = "default" }
# dev = { features = ["dev"], solve-group = "default" }
# docs = { features = ["docs"], solve-group = "default" }
# test = { features = ["test"], solve-group = "default" }
# test-infrastructure = { features = ["test-infrastructure"], solve-group = "default" }
# py37 = { features = ["py37", "dev"], solve-group = "py37" }
py38 = { features = ["py38", "dev", "pixi-bridges"], solve-group = "py38" }
py39 = { features = ["py39", "dev", "pixi-bridges"], solve-group = "py39" }
py310 = { features = ["py310", "dev", "pixi-bridges"], solve-group = "py310" }
py311 = { features = ["py311", "dev", "pixi-bridges"], solve-group = "py311" }
py312 = { features = ["py312", "dev", "pixi-bridges"], solve-group = "py312" }
py313 = { features = ["py313", "dev", "pixi-bridges"], solve-group = "py313" }
py314 = { features = ["py314", "dev", "pixi-bridges"], solve-group = "py314" }
# dev = { features = ["dev"], no-default-feature = true }

# [tool.pixi.feature.dev.dependencies]
# # TODO this is a missing transitive dependency of pyberny
# pkg_resources = "*"

# [tool.pixi.feature.py37.dependencies]
# python = "3.7.*"
# openbabel = "*"

[tool.pixi.feature.py38.dependencies]
python = "3.8.*"
psi4 = "*"

[tool.pixi.feature.py39.dependencies]
python = "3.9.*"
psi4 = "*"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"
psi4 = "*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
psi4 = "*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"
psi4 = "*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"
psi4 = "*"

[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.ruff]
line-length = 100

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
extend-select = [
    "I",  # isort
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
lines-after-imports = 2
# default is FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
# Placing third-party imports at the end makes their inclusion more obvious
section-order = [
    "future",
    "standard-library",
    "first-party",
    "third-party",
    "local-folder"
]

[tool.ruff.lint.per-file-ignores]
"test/test*.py" = [
    "PLR2004",  # magic value comparison
    "S101",  # use of assert detected
    "TCH002",  # third party import (for pytest)
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.package-dir]
cclib = "cclib"

[tool.versioningit.format]
method = { module = "versioningit_override", value = "cclib_format", module-dir = "tools" }

[tool.versioningit.template-fields.version-tuple]
pep440 = true

[tool.versioningit.vcs]
method = "git"
match = ["v*"]

[tool.versioningit.write]
file = "cclib/_version.py"
