[project]
name = "cclib"
dynamic = ["version"]
description = "parsers and algorithms for computational chemistry"
readme = "README.md"
authors = [
    { name = "cclib development team", email = "cclib@googlegroups.com" }
]
maintainers = [
    { name = "cclib development team", email = "cclib@googlegroups.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "packaging>=19.0",
    "periodictable",
    "scipy>=1.2.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/cclib/cclib/issues"
Changelog = "https://github.com/cclib/cclib/blob/master/doc/sphinx/changelog.rst"
Documentation = "http://cclib.github.io/"
Homepage = "https://github.com/cclib/cclib"

[project.scripts]
ccframe = "cclib.scripts.ccframe:main"
ccget = "cclib.scripts.ccget:ccget"
ccwrite = "cclib.scripts.ccwrite:main"
cda = "cclib.scripts.cda:main"

[project.optional-dependencies]
# The Open Babel PyPI package for version < 3.2.0 is missing native wheels and
# requires using SWIG to compile the Python extension against a preinstalled
# native library.  The wheels for version >= 3.2.0 only support Python >=
# 3.10.
#
# With Pixi v0.67.2, specifying a (conda) dependency via Pixi doesn't seem
# override the corresponding PyPI dependency, so we create groups that leave
# out Open Babel and manually specify it as a Pixi dependency for Python <
# 3.10 versions while keeping everything as-is for Python >= 3.10.
all = ["cclib[bridges]"]
bridges = ["cclib[bridges-no-openbabel,openbabel]"]
bridges-no-openbabel = [
    "ase>=3.21",
    "biopython",
    "chemfiles",
    "pandas",
    "pyscf",
    "geometric",
    "qc-iodata>=1.0.0a2",
    "qcschema @ git+https://github.com/cclib/QCSchema.git@branches/make-pip-installable",
]
dev = ["cclib[bridges,docs,test-infrastructure]"]
dev-no-openbabel = ["cclib[bridges-no-openbabel,docs,test-infrastructure]"]
docs = [
    "build",
    "sphinx",
    "sphinx_rtd_theme",
]
openbabel = ["openbabel"]
test = ["cclib[bridges,docs,test-infrastructure]"]
test-infrastructure = [
    "pytest-cov",
    "pytest-xdist",
    "pyyaml",
]

[dependency-groups]
bridges-git = [
    "pyberny @ git+https://github.com/cclib/pyberny.git@8142ce1bc468664aef18e88099b03734bff982e5",
    "pyquante2 @ git+https://github.com/cclib/pyquante2.git@old-python",
    "pyscf-properties @ git+https://github.com/pyscf/properties.git",
]

[build-system]
requires = [
    "setuptools>=61.0",
    "versioningit>=2.0",
]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
branch = true

[tool.mypy]
disable_error_code = [
    "attr-defined",
]
disallow_incomplete_defs = true
disallow_untyped_defs = true
enable_error_code = [
    "ignore-without-code",
]
strict = true

[[tool.mypy.overrides]]
module = [
    "Bio.PDB.Atom",
    "Bio.PDB.Superimposer",
    "PyQuante.CGBF",
    "PyQuante.Molecule",
    "PyQuante.hartree_fock",
    "ase",
    "ase.calculators.calculator",
    "ase.calculators.emt",
    "ase.io.trajectory",
    "h5py",
    "horton",
    "horton.io.iodata",
    "iodata",
    "iodata.api",
    "iodata.orbitals",
    "openbabel",
    "openbabel.pybel",
    "periodictable",
    "psi4",
    "psi4.core",
    "pybel",
    "pyquante2",
    "pyscf",
    "pyscf.geomopt.berny_solver",
    "pyscf.geomopt.geometric_solver",
    "pyscf.prop",
    "pyvtk",
    "pyvtk.DataSetAttr",
    "scipy",
    "scipy.constants",
    "scipy.spatial",
    "scipy.spatial.transform",
    "skip",
    "test_data",
    "common",
]
ignore_missing_imports = true

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = [
    "linux-64",
    "osx-arm64",
    "win-64",
]
preview = ["pixi-build"]

# This can't be present until Psi4 is packaged for Python 3.14.
#
# [tool.pixi.dependencies]
# psi4 = "*"

[tool.pixi.pypi-dependencies]
cclib = { path = ".", editable = true }

[tool.pixi.environments]
py38 = { features = ["py38", "dev-no-openbabel", "bridges-git"], solve-group = "py38" }
py39 = { features = ["py39", "dev-no-openbabel", "bridges-git"], solve-group = "py39" }
py310 = { features = ["py310", "dev", "bridges-git"], solve-group = "py310" }
py311 = { features = ["py311", "dev", "bridges-git"], solve-group = "py311" }
py312 = { features = ["py312", "dev", "bridges-git"], solve-group = "py312" }
py313 = { features = ["py313", "dev", "bridges-git"], solve-group = "py313" }
py314 = { features = ["py314", "dev", "bridges-git"], solve-group = "py314" }

[tool.pixi.feature.py38.dependencies]
libint = { version = "==2.9.0", build = "*_4" }
openbabel = "*"
psi4 = "*"
python = "3.8.*"

[tool.pixi.feature.py39.dependencies]
libint = { version = "==2.9.0", build = "*_4" }
openbabel = "*"
psi4 = "*"
python = "3.9.*"

[tool.pixi.feature.py310.dependencies]
psi4 = "*"
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
psi4 = "*"
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
psi4 = "*"
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
psi4 = "*"
python = "3.13.*"

[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.package]
name = "cclib"
# This means `pixi build` will fail, but leaving it in causes problems with
# `nix build`, which must be using regex to find the version in this file.
#
# version = "1.8.1"

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "0.*" }

[tool.pixi.package.host-dependencies]
setuptools = ">=61.0"
versioningit = ">=2.0"

[tool.pixi.package.run-dependencies]
numpy = "*"
packaging = ">=19.0"
periodictable = "*"
scipy = ">=1.2.0"

[tool.ruff]
line-length = 100

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
extend-select = [
    "I",  # isort
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
lines-after-imports = 2
# default is FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
# Placing third-party imports at the end makes their inclusion more obvious
section-order = [
    "future",
    "standard-library",
    "first-party",
    "third-party",
    "local-folder"
]

[tool.ruff.lint.per-file-ignores]
"test/test*.py" = [
    "PLR2004",  # magic value comparison
    "S101",  # use of assert detected
    "TCH002",  # third party import (for pytest)
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.package-dir]
cclib = "cclib"

[tool.versioningit.format]
method = { module = "versioningit_override", value = "cclib_format", module-dir = "tools" }

[tool.versioningit.template-fields.version-tuple]
pep440 = true

[tool.versioningit.vcs]
method = "git"
match = ["v*"]

[tool.versioningit.write]
file = "cclib/_version.py"
